// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normaliseResolverResults converts [
  '{BASE_URL}/foo/bar/blob/master/file.js',
  '{BASE_URL}/foo/bar/blob/master/file.js'
] 1`] = `
[
  {
    "branch": "master",
    "path": "file.js",
    "repo": "bar",
    "type": "internal-link",
    "url": "https://github.com/foo/bar/blob/master/file.js",
    "user": "foo",
  },
  {
    "branch": "master",
    "path": "file.js",
    "repo": "bar",
    "type": "internal-link",
    "url": "https://github.com/foo/bar/blob/master/file.js",
    "user": "foo",
  },
]
`;

exports[`normaliseResolverResults converts [ '{BASE_URL}/foo/bar/blob/master/file.js' ] 1`] = `
[
  {
    "branch": "master",
    "path": "file.js",
    "repo": "bar",
    "type": "internal-link",
    "url": "https://github.com/foo/bar/blob/master/file.js",
    "user": "foo",
  },
]
`;

exports[`normaliseResolverResults converts { registry: 'npm', target: 'foo' } 1`] = `
[
  {
    "registry": "npm",
    "target": "foo",
    "type": "registry",
  },
]
`;

exports[`normaliseResolverResults converts {BASE_URL}/file.js 1`] = `
[
  {
    "target": "https://github.com/file.js",
    "type": "ping",
  },
]
`;

exports[`normaliseResolverResults converts {BASE_URL}/foo/bar/blob/1ab8cfd3b65d3b43335130d6cefbf8c62482680f/file.js 1`] = `
[
  {
    "branch": "1ab8cfd3b65d3b43335130d6cefbf8c62482680f",
    "path": "file.js",
    "repo": "bar",
    "type": "internal-link",
    "url": "https://github.com/foo/bar/blob/1ab8cfd3b65d3b43335130d6cefbf8c62482680f/file.js",
    "user": "foo",
  },
]
`;

exports[`normaliseResolverResults converts {BASE_URL}/foo/bar/blob/master/file.js 1`] = `
[
  {
    "branch": "master",
    "path": "file.js",
    "repo": "bar",
    "type": "internal-link",
    "url": "https://github.com/foo/bar/blob/master/file.js",
    "user": "foo",
  },
]
`;

exports[`normaliseResolverResults converts {BASE_URL}file.js 1`] = `
[
  {
    "target": "https://github.comfile.js",
    "type": "ping",
  },
]
`;

exports[`normaliseResolverResults converts function () {} 1`] = `
[
  {
    "handler": [Function],
    "type": "function",
  },
]
`;

exports[`normaliseResolverResults converts https://foosearch.org/ 1`] = `
[
  {
    "target": "https://foosearch.org/",
    "type": "ping",
  },
]
`;

exports[`normaliseResolverResults converts https://novalidurl 1`] = `
[
  {},
]
`;
